Update to current template