@@ -1,6 +1,5 @@
 ## Building stage
-#FROM openjdk:11-jdk AS builder # use OpenJDK 11 if desired
-FROM openjdk:8-jdk-alpine3.9 AS builder
+FROM azul/zulu-openjdk-alpine:11.0.7 AS builder
 WORKDIR /src/
 
 # cache gradle
@@ -14,18 +13,25 @@ COPY . /src/
 RUN ./gradlew build
 
 ## Final image
-#FROM openjdk:11-jre # use OpenJDK 11 if desired
-FROM openjdk:8-jre-alpine3.9
+FROM azul/zulu-openjdk-alpine:11.0.7-jre
+
+# add a group and an user with specified IDs
+RUN addgroup -S -g 1111 appgroup && adduser -S -G appgroup -u 1111 appuser 
+#RUN groupadd -r -g 1111 appgroup && useradd -r -g appgroup -u 1111 --no-log-init appuser # if based on Debian/Ubuntu
 
 # add curl for health check
 RUN apk add --no-cache curl
+#RUN apt-get update && apt-get install -y curl && rm -rf /var/lib/apt/lists/* # if based on Debian/Ubuntu
 
 WORKDIR /app
 COPY --from=builder /src/build/libs/*-all.jar /app/microservice.jar
 
-# set the default port to 80
-ENV MICRONAUT_SERVER_PORT 80
-EXPOSE 80
+# switch to unprivileged user for following commands
+USER appuser
+
+# set the default port to 8080
+ENV MICRONAUT_SERVER_PORT 8080
+EXPOSE 8080
 
 # use a log appender with no timestamps as Docker logs the timestamp itself ("docker logs -t ID")
 ENV LOG_APPENDER classic-stdout
@@ -35,7 +41,7 @@ HEALTHCHECK --interval=5m --timeout=5s --retries=3 --start-period=1m CMD curl --
 # "-XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap" lets the JVM respect CPU and RAM limits inside a Docker container
 CMD ["java", \
      "-XX:+UnlockExperimentalVMOptions", \
-     "-XX:+UseCGroupMemoryLimitForHeap", \
+     "-XX:+UseContainerSupport", \
      "-noverify", \
      "-XX:TieredStopAtLevel=1", \
      "-Dcom.sun.management.jmxremote", \
